k8s/mediaserver/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: mediaserver
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      tolerations:
        - key: "arm"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: transmission
          image: ghcr.io/linuxserver/transmission:latest
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /watch
              name: watch
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-pvc    
        - name: downloads
          nfs:
            server: 192.168.100.62
            path: /mnt/tank/media/torrents/
        - name: watch
          nfs:
            server: 192.168.100.62
            path: /mnt/tank/media/torrent-watch/
