k8s/mediaserver/transmission/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: mediaserver
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - port: 9092
      targetPort: 9091
