k8s/mediaserver/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.151
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - port: 9091
