k8s/mediaserver/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: mediaserver
spec:
  ingressClassName: nginx
  rules:
    - host: "transmission.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: transmission-service
                port:
                  number: 9091
  tls:
    - hosts:
        - transmission.enricoruggieri.com
      secretName: transmission-cert-tls
